corrigiendo cosas